--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "clsx": "^2.1.1",
     "formidable": "^3.5.1",
     "lucide-react": "^0.445.0",
+    "micro": "^10.0.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "replicate": "^0.33.0",
+    "svix": "^1.36.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
